<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" >
    <string name="app_name">Meehab</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="google_api_key">AIzaSyAwwH_CGi-GyPYmDqEVDv3eC9AfOgsLO7U</string>
    <string name="fb_app_id">970695853049903</string>
    <string name="facebook_app_name">Meehab</string>
    <string name="qb_app_id">26984</string>
    <string name="qb_auth_key">WYO2AaVeK6YOC5V</string>
    <string name="qb_auth_secret">3GD4muBBFVHRPEe</string>
    <string name="time_out">There seems to be a problem with your connection... please try again.</string>
    <string name="google_services">There seems to be a problem... please try again.</string>
    <string name="connection_error">There seems to be a problem with your connection... please try again.</string>
    <string name="resend_here"><u>Resend here</u></string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_edit_my_profile">EditMyProfileActivity</string>
    <string name="title_activity_request_add_meeting">RequestAddMeetingActivity</string>
    <string name="title_activity_request_rehab_addition">RequestRehabAdditionActivity</string>
    <string name="title_activity_two_option">TwoOptionActivity</string>
    <string name="network_problem">It\'s seems to be network problem</string>
    <string name="email_has_been_send">Email has been sent!</string>
    <string name="server_response_error">Server Response error</string>
    <string name="title_activity_change_email">ChangeEmailActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_block_friends">BlockFriendsActivity</string>
    <string name="title_activity_provide_app_feed_back">ProvideAppFeedBackActivity</string>
    <string name="disconnect_my_facebook">Disconnect My Facebook Account</string>
    <string name="dating_and_fellowshiping">Dating and Fellowshiping</string>
    <string name="search_for_favorites">Search for Favorites</string>
    <string name="search_for_friends">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Search for Friends</string>
    <string name="search_for_meetings">Search for Meetings</string>
    <string name="search_for_rehabs">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Search for Rehabs</string>
    <string name="email_is_required">Email is required</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="email_has_been_changed">Your email has been successfully changed.</string>
    <string name="please_enter_new_email">Please enter the new email address you would like to use.</string>
    <string name="my_favorites">My Favorites</string>
    <string name="title_activity_full_screen_map">FullScreenMapActivity</string>
    <string name="title_activity_add_review_over_meeting">AddReviewOverMeetingActivity</string>
    <string name="title_activity_report_inaccuracy">ReportInaccuracyActivity</string>
    <string name="simple_long_text">What is Lorem Ipsum?\nLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="title_activity_my_review_detail">MyReviewDetailActivity</string>
    <string name="forget_password_screen_msg">Please enter the email associated with your account. We will send you login details.</string>
    <string name="problems_logging_in">Problems with Log in</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="gender">GENDER</string>
    <string name="birthday">Birthday</string>
    <string name="marital_status">Marital Status</string>
    <string name="interested_in_">INTERESTED IN...</string>
    <string name="my_aa_story">My AA Story</string>
    <string name="create_account_term_and_conditions_text">By using Meehab you agree to our</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy &amp; Policy</string>
    <string name="occupation">Occupation</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="do_you_have_kids_">Do you have kids?</string>
    <string name="filter">FILTER</string>
    <string name="meetings">MEETINGS</string>
    <string name="friends">FRIENDS</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Permanently Delete Account</string>
    <string name="rate_us">Rate Us</string>
    <string name="provide_feedback">Provide Feedback</string>
    <string name="block_friends">Block Friends</string>
    <string name="other">Other</string>
    <string name="request_a_rehab_addition">Request a Rehab Addition</string>
    <string name="request">Request</string>
    <string name="message_notifications">Message Notifications</string>
    <string name="link_my_facebook_account">Link my Facebook Account</string>
    <string name="change_insurance_information">Change Insurance Information</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="account">Account</string>
    <string name="appear_online">Appear Online</string>
    <string name="date_time">DATE &amp; TIME</string>
    <string name="inaccuracy">Inaccuracy</string>
    <string name="hello_username_str">Hello, %1$s!</string>
    <string name="delete">Delete</string>
    <string name="review">Review</string>
    <string name="post">Post</string>
    <string name="meeting_date">Meeting date</string>
    <string name="meeting_time">Meeting Time</string>
    <string name="save">Save</string>
    <string name="old_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_new_password">Retype New Password</string>
    <string name="see_more_reveiw">SEE %1$d MORE REVIEWS</string>
    <string name="login_problem">Problems with Log in?</string>
    <string name="no_internet_connection">No internet connection available!</string>
    <string name="login">Login</string>
    <string name="grid">GRID</string>
    <string name="list">LIST</string>
    <string name="sending_sms">Sending code by sms to</string>
    <string name="inprogress">Verification in\nprogress</string>
    <string name="verified">Verification successful</string>
    <string name="failed">Verification failed</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="phone_number_is_invalid">Enter valid phone number</string>
    <string name="friend_profile_heading">%1$s\'s Profile</string>
    <string name="my_profile_s">My Profile\'s</string>
    <string name="report_txt_hint">Briefly describe your reason for reporting this user (250 character limit)</string>
    <string name="send_message">SEND MESSAGE</string>
    <string name="send_a_message_">Send a message...</string>
    <string name="online_now">Online now</string>
    <string name="willing_to_sponsor">Willing to Sponsor</string>
    <string name="has_kids">Has kids</string>
    <string name="age">Age</string>
    <string name="any">Any</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="messages">Messages</string>
    <string name="share_body_text">Hey! There\'s new app that I\'m using called Meehab and I love it! It is free and convenient way to find meetings, rehab, reviews and best of all, meet new friends! This app has everything you need and I highly recommend it! You should check it out!\n\nDownload link: </string>
    <string name="share_body_text_twitter">Check this App out!\nhttp://www.LinkToMeehabInAppleStorePlaceholder.com</string>
    <string name="insurance_dialog_text">Please select your insurance so we can help you find a center that matches your insurance.</string>
    <string name="plz_enter_insurance_txt">Please enter your insurance from the list provided.</string>
    <string name="if_you_dont_have_insurance">If you don\'t have insurance, you can skip this step by clicking \"Skip\" in the top right.</string>
    <string name="please_explain_the_inaccuracy">Please explain the inaccuracy...(250 character limit)</string>
    <string name="feedback_hint">Please write any comments you have for us in here. We appreciate any and all types of feedback.\n(250 character limit)</string>
    <string name="type_of_facility">Type of Facility</string>
    <string name="type_of_meeting">Type of Meeting</string>
    <string name="zip_code">Zip Code</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="meeting_day">Meeting Day</string>
    <string name="meeting_name">Meeting Name</string>
    <string name="num_blocked_friends_list">%1$d BLOCKED FRIENDS LISTED</string>
    <string name="num_blocked_friend_list">%1$d BLOCKED FRIEND LISTED</string>
    <string name="no_blocked_friend_list">No blocked friend listed.</string>
    <string name="sober_date_diff_formate">%1$d years, %2$d days, %3$d hours, %4$d minutes, %5$d seconds</string>
    <string name="sober_date_diff_formate_profile">%1$d Y, %2$d D, %3$d H, %4$d M, %5$d S</string>
    <string name="num_favourites_attending">%1$d favorites Attending!</string>
    <string name="no_favourite_attending">No favorite Attending!</string>
    <string name="rsvp_d">RSVP\'d</string>
    <string name="rsvp_title">RSVP\'d Friends</string>
    <string name="no_rsvp_empty">No RSVP\'d Friends</string>
    <string name="add_meeting_to_calendar_confirmation_text">Would you like to add this meeting to your calendar?</string>
    <string name="remove_meeting_from_calendar_confirmation_text">Would you like to remove this meeting from your calendar?</string>
    <string name="check_meeting_confirmation_text">Would you like to check-in this meeting?</string>
    <string name="check_out_meeting_confirmation_text">Would you like to check-out this meeting?</string>
    <string name="choose_a_different_date">CHOOSE A DIFFERENT DATE</string>
    <string name="back_to_rsvp_ing">BACK TO RSVPING</string>
    <string name="enter_valid_phone_number">Please enter valid phone number</string>
    <string name="enter_meeting_name">Please enter valid meeting name!</string>
    <string name="select_day">Please select day!</string>
    <string name="select_time">Please select time!</string>
    <string name="enter_address">Please enter meeting address!</string>
    <string name="enter_city">Please enter valid city!</string>
    <string name="enter_zipcode">Please enter valid zipcode!</string>
    <string name="select_type_of_meeting">Please select type of meeting</string>
    <string name="select_type_of_facility">Please select type of facility</string>
    <string name="enter_your_relationship_to_meeting">Enter valid value for relationship to meeting!</string>
    <string name="block_friends_confirmation_text">Do you want to block these friends?</string>
    <string name="block_friend_confirmation_text">Do you want to block this friend?</string>
    <string name="unblock_friend_confirmation_text">Do you want to unblock this friend?</string>
    <string name="rehab_open_now_">OPEN NOW!</string>
    <string name="rehab_close_now_">CLOSE NOW!</string>
</resources>