<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_bg"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <RelativeLayout
            android:id="@+id/relativeTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:clickable="false"
                android:paddingBottom="15dp"
                android:paddingLeft="8dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:scaleType="centerInside"
                android:src="@drawable/back_btn" />

            <TextView
                android:id="@+id/topCenterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/register"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@null"
            android:gravity="center"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 "
            android:hint="@string/username"
            android:inputType="textWebEditText|textCapWords"
            android:maxLength="30"
            
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#EFEFEF" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/login_divider" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#EFEFEF" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/login_divider" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
           
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#EFEFEF" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/login_divider" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@null"
            android:gravity="center"
            android:hint="Phone Number"
            android:inputType="phone"
             android:maxLength="10"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#EFEFEF" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/login_divider" />
    </LinearLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20dp" />

    <ImageButton
        android:id="@+id/ibNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/next_btn"
        android:text="" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:layout_centerHorizontal="true"
            android:text="@string/create_account_term_and_conditions_text"
            android:textColor="#f00"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/txtTerms"
            android:layout_below="@id/label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:gravity="center"
            android:text="@string/terms_conditions"
            android:textColor="#f00"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/txtPolicy"
            android:layout_below="@id/label1"
            android:layout_toRightOf="@id/txtTerms"
            android:layout_marginLeft="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:gravity="center"
            android:text="@string/privacy_policy"
            android:textColor="#f00"
            android:textSize="12sp" />

    </RelativeLayout>

</LinearLayout>