<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/nav_light_gray" >

        <ImageView
            android:id="@+id/topMenuBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:clickable="false"
            android:paddingLeft="8dp"
           
             android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingRight="15dp"
            android:src="@drawable/menu_icon" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:text="Options"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/relativeTop"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" >

                <Button
                    android:id="@+id/btnAppearTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:gravity="left|center_vertical"
                    android:text="@string/appear_online"
                    android:textColor="@color/text_color_dark_gray" />

                <CheckBox
                    android:id="@+id/cbAppearOffline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/toggle_selector"
                    android:checked="false"
                    android:button="@null"
                    android:textOff=""
                    android:textOn="" />
            </RelativeLayout>

            <Button
                android:background="@color/nav_silver_gray"
                android:textColor="@color/text_color_dark_gray"
                android:layout_height="28dp"
                android:focusable="false"
                android:clickable="false"
                android:focusableInTouchMode="false"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/account"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/btnChangeEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/simple_button_selector"
                android:drawableRight="@drawable/right_arrow"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/change_email"
                android:textColor="@color/text_color_dark_gray" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#99cccccc" />

            <Button
                android:id="@+id/btnChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/simple_button_selector"
                android:drawableRight="@drawable/right_arrow"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/change_password"
                android:textColor="@color/text_color_dark_gray" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#99cccccc" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/simple_button_selector"
                android:drawableRight="@drawable/right_arrow"
                android:gravity="left|center_vertical"
                android:id="@+id/btnChangeInsurance"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/change_insurance_information"
                android:textColor="@color/text_color_dark_gray" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#99cccccc" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="2dp" >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="left|center_vertical"
                android:text="@string/link_my_facebook_account"
                android:textColor="@color/text_color_dark_gray" />
            
            <CheckBox
                    android:id="@+id/cbLinkFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:button="@null"
                    android:layout_centerVertical="true"
                    android:background="@drawable/toggle_selector"
                    android:checked="true"
                    android:textOff=""
                    android:textOn="" />

            </RelativeLayout>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#99cccccc" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="2dp" >

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:gravity="left|center_vertical"
                    android:text="@string/message_notifications"
                    android:textColor="@color/text_color_dark_gray" />

                <CheckBox
                    android:id="@+id/cbMessageNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:button="@null"
                    android:layout_centerVertical="true"
                    android:background="@drawable/toggle_selector"
                    android:checked="true"
                    android:textOff=""
                    android:textOn="" />
            </RelativeLayout>

            <!--  -->

            <Button
                android:background="@color/nav_silver_gray"
                android:textColor="@color/text_color_dark_gray"
                android:layout_height="28dp"
                android:focusable="false"
                android:clickable="false"
                android:focusableInTouchMode="false"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/request"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/requestMeetingAdditionBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/simple_button_selector"
                android:drawableRight="@drawable/right_arrow"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="Request a Meeting Addition"
                android:textColor="@color/text_color_dark_gray" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#99cccccc" />

            <Button
                android:id="@+id/requestRehabAdditionBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/simple_button_selector"
                android:drawableRight="@drawable/right_arrow"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/request_a_rehab_addition"
                android:textColor="@color/text_color_dark_gray" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#99cccccc" />

            <Button
                android:background="@color/nav_silver_gray"
                android:textColor="@color/text_color_dark_gray"
                android:layout_height="28dp"
                android:focusable="false"
                android:clickable="false"
                android:focusableInTouchMode="false"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/other"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/btnBlockFriends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/simple_button_selector"
                android:drawableRight="@drawable/right_arrow"
                android:gravity="left|center_vertical"
                android:textColor="@color/text_color_dark_gray"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/block_friends" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#99cccccc" />

            <Button
                android:id="@+id/btnProvideFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/simple_button_selector"
                android:drawableRight="@drawable/right_arrow"
                android:gravity="left|center_vertical"
                android:textColor="@color/text_color_dark_gray"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/provide_feedback" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#99cccccc" />

            <Button
                android:id="@+id/rateUsBtn"
                android:textColor="@color/text_color_dark_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/simple_button_selector"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/rate_us" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#99cccccc" />
            <Button
                android:id="@+id/btnTermsCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/simple_button_selector"
                android:drawableRight="@drawable/right_arrow"
                android:gravity="left|center_vertical"
                android:textColor="@color/text_color_dark_gray"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/terms_conditions" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#99cccccc" />

            <Button
                android:id="@+id/btnPrivacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/simple_button_selector"
                android:drawableRight="@drawable/right_arrow"
                android:gravity="left|center_vertical"
                android:textColor="@color/text_color_dark_gray"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/privacy_policy" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#99cccccc" />
            <Button
                android:id="@+id/logout"
                android:textColor="@color/text_color_dark_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/simple_button_selector"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/logout" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#99cccccc" />
            <Button
                android:id="@+id/btnDeleteAccount"
                android:textColor="@color/text_color_dark_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/simple_button_selector"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/delete_account" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>